[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bark-infinity"
version = "0.0.3"
description = "Bark text to audio model"
readme = "README.md"
requires-python = ">=3.8"
authors =  [
    {name = "Suno Inc", email = "hello@suno.ai"},
    {name = "Jonathan Fly"},
]
# Apache 2.0
license = {file = "LICENSE"}

[project.urls]
source = "https://github.com/JonathanFly/bark"

[tool.setuptools]
install_requires = [
    {file = "requirements-pip.txt"},
]

[project.optional-dependencies]
dev = [
    {file = "requirements-dev-pip.txt"},
]


[tool.setuptools.package-data]
bark = ["assets/prompts/*.npz"]

[tool.black]
line-length = 100
